--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -4,7 +4,7 @@ CC = CC
 
 CFLAGS = -Wall -Werror -Wextra
 
-SRC = so_long.c libft_funcs.c movm.c check_map.c ft_split.c check_characters.c gnl/get_next_line.c gnl/get_next_line_utils.c search_map.c check_mov.c check_if_valid.c display/display.c
+SRC = so_long.c libft_funcs.c display/movm.c check_map.c ft_split.c check_characters.c gnl/get_next_line.c gnl/get_next_line_utils.c search_map.c check_mov.c check_if_valid.c display/display.c
 
 OBJS = $(patsubst %.c, %.o, $(SRC))
 
